--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -13,7 +13,8 @@ coroutines = "1.8.0"
 koin = "3.5.6"
 lifecycle = "2.7.0"
 androidGradlePlugin = "8.2.2"
-kotlinGradlePlugin = "1.9.23"
+kotlin = "1.9.23"
+ksp = "1.9.23-1.0.20"
 
 [libraries]
 core = { module = "androidx.core:core-ktx", version = "1.13.1" }
@@ -50,6 +51,6 @@ koinCompose = { module = "io.insert-koin:koin-androidx-compose", version = "3.4.
 [plugins]
 android-application = { id = "com.android.application", version.ref = "androidGradlePlugin" }
 android-library = { id = "com.android.library", version.ref = "androidGradlePlugin" }
-kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlinGradlePlugin" }
-kotlin-multiplatform = { id = "org.jetbrains.kotlin.multiplatform", version.ref = "kotlinGradlePlugin" }
-ksp = { id = "com.google.devtools.ksp", version = "1.9.23-1.0.20" }
+kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
+kotlin-multiplatform = { id = "org.jetbrains.kotlin.multiplatform", version.ref = "kotlin" }
+ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
